--- a/www/css/main.css
+++ b/www/css/main.css
@@ -90,6 +90,137 @@
     width: 1px;
     height: 10px; }
 
+.arrow {
+  display: inline-block;
+  width: 10px;
+  height: 10px;
+  border-top: 1px solid rgba(255, 255, 255, 0.6);
+  border-right: 1px solid rgba(255, 255, 255, 0.6); }
+  .arrow.arrow-down {
+    transform: rotate(135deg); }
+
+.checkbox-custom {
+  height: 27px;
+  padding-left: 35px;
+  margin-bottom: 12px;
+  display: flex;
+  align-items: center;
+  position: relative;
+  font-size: 16px;
+  font-weight: 200;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none; }
+
+/* Hide the browser's default checkbox */
+.checkbox-custom input {
+  position: absolute;
+  opacity: 0;
+  cursor: pointer;
+  height: 0;
+  width: 0; }
+
+/* Create a custom checkbox */
+.checkmark {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 25px;
+  width: 25px;
+  background-color: transparent;
+  border: 1px solid #fff; }
+
+/* On mouse-over, add a grey background color */
+/* When the checkbox is checked, add a blue background */
+/* Create the checkmark/indicator (hidden when not checked) */
+.checkmark:after {
+  content: "";
+  position: absolute;
+  display: none; }
+
+/* Show the checkmark when checked */
+.checkbox-custom input:checked ~ .checkmark:after {
+  display: block; }
+
+/* Style the checkmark/indicator */
+.checkbox-custom .checkmark:after {
+  left: 9px;
+  top: 5px;
+  width: 5px;
+  height: 10px;
+  border: solid white;
+  border-width: 0 3px 3px 0;
+  transform: rotate(45deg); }
+
+.checkbox-block {
+  margin-bottom: 40px; }
+
+.input-block, .select-block {
+  margin-bottom: 20px;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.6); }
+  .input-block p sup, .select-block p sup {
+    color: red; }
+  .input-block input, .input-block select, .select-block input, .select-block select {
+    width: 100%;
+    padding: 10px;
+    display: block;
+    background: transparent;
+    border: 0;
+    font-size: 16px;
+    box-sizing: border-box;
+    color: #fff; }
+    .input-block input::-webkit-input-placeholder, .input-block select::-webkit-input-placeholder, .select-block input::-webkit-input-placeholder, .select-block select::-webkit-input-placeholder {
+      color: #fff; }
+    .input-block input::-moz-placeholder, .input-block select::-moz-placeholder, .select-block input::-moz-placeholder, .select-block select::-moz-placeholder {
+      color: #fff; }
+    .input-block input:-ms-input-placeholder, .input-block select:-ms-input-placeholder, .select-block input:-ms-input-placeholder, .select-block select:-ms-input-placeholder {
+      color: #fff; }
+    .input-block input::-ms-input-placeholder, .input-block select::-ms-input-placeholder, .select-block input::-ms-input-placeholder, .select-block select::-ms-input-placeholder {
+      color: #fff; }
+    .input-block input::placeholder, .input-block select::placeholder, .select-block input::placeholder, .select-block select::placeholder {
+      color: #fff; }
+    .input-block input:focus, .input-block select:focus, .select-block input:focus, .select-block select:focus {
+      outline: none; }
+
+.area-block p {
+  padding-top: 10px;
+  margin-bottom: 10px; }
+
+.area-block textarea {
+  width: 100%;
+  padding: 10px;
+  display: block;
+  background: transparent;
+  border: 1px solid rgba(255, 255, 255, 0.6);
+  box-sizing: border-box; }
+
+.select-block {
+  display: flex;
+  align-items: center;
+  flex-direction: row-reverse; }
+  .select-block .select-icon {
+    pointer-events: none; }
+  .select-block select {
+    -webkit-appearance: none;
+       -moz-appearance: none;
+            appearance: none; }
+    .select-block select option {
+      background: #fff;
+      color: #495388; }
+
+.btn-primary {
+  width: 100%;
+  max-width: 60vw;
+  height: 45px;
+  text-align: center;
+  background: #fff;
+  border: 1px solid #fff;
+  color: #495489;
+  border-radius: 45px;
+  font-weight: 600;
+  letter-spacing: 1px; }
+
 body {
   margin: 0;
   color: #fff;
@@ -125,6 +256,10 @@ figure, h1, h2, h3, h4, h5, p {
   letter-spacing: 5.5px; }
   .title sup {
     font-size: 8vw; }
+
+.sub-title {
+  font-size: 30px;
+  font-weight: 400; }
 
 .p-small {
   font-size: 12px;
@@ -178,3 +313,10 @@ figure, h1, h2, h3, h4, h5, p {
       flex: 1; }
     .item__container p:last-child {
       text-align: right; }
+
+.form__des {
+  margin-bottom: 15px; }
+
+.form__footer {
+  margin-top: 40px;
+  text-align: center; }
