--- a/www/scss/_icon.scss
+++ b/www/scss/_icon.scss
@@ -101,3 +101,14 @@
     height: 10px;
   }
 }
+
+.arrow {
+  display: inline-block;
+  width: 10px;
+  height: 10px;
+  border-top: 1px solid rgba(#fff, 0.6);
+  border-right: 1px solid rgba(#fff, 0.6);
+  &.arrow-down {
+        transform: rotate(135deg);
+  }
+}
