--- a/www/scss/_form.scss
+++ b/www/scss/_form.scss
@@ -93,6 +93,9 @@
     p {
         padding-top: 10px;
         margin-bottom: 10px;
+        sup {
+            // color: red;
+        }
     }
     textarea {
         width: 100%;
