--- a/www/scss/main.scss
+++ b/www/scss/main.scss
@@ -82,6 +82,7 @@ figure, h1, h2, h3, h4, h5, p {
     padding: 25px 0;
     &__heading {
         margin-bottom: 10px;
+        text-align: center;
     }
     &__p {
         margin-bottom: 10px;
