--- a/www/css/main.css
+++ b/www/css/main.css
@@ -237,7 +237,9 @@ figure, h1, h2, h3, h4, h5, p {
   margin: 0;
   padding: 0;
   list-style: none;
-  text-decoration: none; }
+  text-decoration: none;
+  letter-spacing: 1px;
+  line-height: 1.4; }
 
 .container {
   padding: 0 25px; }
@@ -321,3 +323,53 @@ figure, h1, h2, h3, h4, h5, p {
 .form__footer {
   margin-top: 40px;
   text-align: center; }
+
+@-webkit-keyframes loading {
+  0% {
+    width: 50pt;
+    height: 50pt;
+    margin-top: 0; }
+  25% {
+    height: 4pt;
+    margin-top: 23pt; }
+  50% {
+    width: 4pt; }
+  75% {
+    width: 50pt; }
+  100% {
+    width: 50pt;
+    height: 50pt;
+    margin-top: 0; } }
+
+@keyframes loading {
+  0% {
+    width: 50pt;
+    height: 50pt;
+    margin-top: 0; }
+  25% {
+    height: 4pt;
+    margin-top: 23pt; }
+  50% {
+    width: 4pt; }
+  75% {
+    width: 50pt; }
+  100% {
+    width: 50pt;
+    height: 50pt;
+    margin-top: 0; } }
+
+.loader {
+  width: 50px;
+  height: 50px;
+  border-radius: 100%;
+  border: #dbdbe6 2px solid;
+  margin-left: auto;
+  margin-right: auto;
+  background-color: transparent;
+  -webkit-animation: loading 1s infinite;
+          animation: loading 1s infinite; }
+
+.load-text {
+  padding-top: 15px;
+  text-align: center;
+  color: white; }
