--- a/www/scss/_icon.scss
+++ b/www/scss/_icon.scss
@@ -31,6 +31,9 @@
 .icon-map:before {
   content: "\e90e";
 }
+.icon-mail-envelope-closed:before {
+  content: "\e910";
+}
 .icon-stop-watch:before {
   content: "\e90f";
 }
@@ -76,6 +79,10 @@
 .icon-cloud-snow:before {
   content: "\e90d";
 }
+.icon-home3:before {
+  content: "\e911";
+}
+
 
 
 //custom-icon
